--- a/src/app/hero-detail-component.html
+++ b/src/app/hero-detail-component.html
@@ -1,10 +1,51 @@
 <div *ngIf="hero">
   <h2>{{hero.name}} details!</h2>
   <div><label>id: </label>{{hero.id}}</div>
-  <div>
-    <label>name: </label>
-    <input [(ngModel)]="hero.name" placeholder="name" />
-  </div>
+  <form [formGroup]="heroForm" novalidate>
+    <div class="form-group">
+      <label class="center-block">Name:
+      <input class="form-control" formControlName="name">
+    </label>
+    </div>
+    <div formGroupName="address" class="well well-lg">
+      <div class="form-group">
+        <label class="center-block">Street:
+      <input class="form-control" formControlName="street">
+    </label>
+      </div>
+      <div class="form-group">
+        <label class="center-block">City:
+      <input class="form-control" formControlName="city">
+    </label>
+      </div>
+      <div class="form-group">
+        <label class="center-block">State:
+      <select class="form-control" formControlName="state">
+          <option *ngFor="let state of states" [value]="state">{{state}}</option>
+      </select>
+    </label>
+      </div>
+      <div class="form-group">
+        <label class="center-block">Zip Code:
+      <input class="form-control" formControlName="zip">
+    </label>
+      </div>
+    </div>
+    <div class="form-group radio">
+      <h4>Super power:</h4>
+      <label class="center-block"><input type="radio" formControlName="power" value="flight">Flight</label>
+      <label class="center-block"><input type="radio" formControlName="power" value="x-ray vision">X-ray vision</label>
+      <label class="center-block"><input type="radio" formControlName="power" value="strength">Strength</label>
+    </div>
+    <div class="checkbox">
+      <label class="center-block">
+      <input type="checkbox" formControlName="sidekick">I have a sidekick.
+    </label>
+    </div>
+  </form>
+  <p>Form value: {{ heroForm.value | json }}</p>
+  <p>Form status: {{ heroForm.status | json }}</p>
+
   <button (click)="goBack()">Back</button>
   <button (click)="save()">Save</button>
 </div>
